--- a/invoice_template_custom_erplibre/views/report_templates.xml
+++ b/invoice_template_custom_erplibre/views/report_templates.xml
@@ -8,64 +8,44 @@
     </xpath>
   </template>
 
+  <!--  view: external_layout_custom_erplibre -->
   <template id="external_layout_custom_erplibre">
-    <div class="header" t-att-style="report_header_style">
-      <div class="row">
-        <div class="col-3 mb4">
-          <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" style="max-height: 45px;" alt="Logo"/>
-        </div>
-        <div class="col-9 text-right" style="margin-top:22px;" t-field="company.report_header" name="moto"/>
+      <div class="header" t-att-style="report_header_style">
+          <div class="o_custom_erplibre_header">
+              <div class="img-logo">
+                  <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
+              </div>
+              <div class="text-center" name="company_address">
+                  <b><p t-if="company.name"><span t-field="company.name"/></p></b>
+                  <p class="tagline" t-field="company.report_header"/>
+                  <p>
+                      <span class="company_address"
+                            t-field="company.partner_id"
+                            t-options='{"widget": "contact", "fields": ["address"], "no_marker": true}'/>
+                  </p>
+                  <p t-if="company.vat"><t t-esc="company.country_id.vat_label or 'Tax ID'"/>: <span t-field="company.vat"/></p>
+                  <p t-if="company.phone">Tel: <span t-field="company.phone"/></p>
+                  <p t-if="company.email"><span t-field="company.email"/></p>
+                  <p t-if="company.website"><span t-field="company.website"/></p>
+              </div>
+          </div>
       </div>
-      <div t-if="company.logo or company.report_header" class="row zero_min_height">
-        <div class="col-12">
-          <div style="border-bottom: 1px solid black;"/>
-        </div>
+
+      <div class="article o_report_layout_custom_erplibre"  t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id" t-att-data-oe-lang="o and o.env.context.get('lang')">
+<!--          <t t-call="web.address_layout"/>-->
+          <t t-raw="0"/>
       </div>
-      <div class="row">
-        <div class="col-6" name="company_address">
-          <div t-field="company.partner_id"
-               t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'
-          />
-        </div>
+
+      <div class="footer o_custom_erplibre_footer">
+          <div class="foot-note">
+              <span t-field="company.report_footer"/>
+          </div>
+
+          <ul t-if="report_type == 'pdf'" class="list-inline pagenumber">
+              <li class="list-inline-item"><strong><span class="page"/></strong></li>
+          </ul>
       </div>
-    </div>
 
-    <div class="article o_report_layout_standard" t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id"
-         t-att-data-oe-lang="o and o.env.context.get('lang')">
-      <t t-call="web.address_layout"/>
-      <t t-raw="0"/>
-    </div>
-
-    <div class="footer o_custom_erplibre_footer">
-      <div class="text-center" style="border-top: 1px solid black;">
-        <ul class="list-inline mb4">
-          <li t-if="company.phone" class="list-inline-item">Phone:
-            <span t-field="company.phone"/>
-          </li>
-          <li t-if="company.email" class="list-inline-item">Email:
-            <span t-field="company.email"/>
-          </li>
-          <li t-if="company.website" class="list-inline-item">Web:
-            <span t-field="company.website"/>
-          </li>
-          <li t-if="company.vat" class="list-inline-item"><t
-              t-esc="(company.country_id.vat_label or 'Tax ID').replace(' ','\N{NO-BREAK SPACE}')"/>:
-            <span t-esc="company.vat.replace(' ','\N{NO-BREAK SPACE}')"/>
-          </li>
-        </ul>
-
-        <div name="financial_infos">
-          <span t-field="company.report_footer"/>
-        </div>
-
-        <div t-if="report_type == 'pdf'" class="text-muted">
-          Page:
-          <span class="page"/>
-          /
-          <span class="topage"/>
-        </div>
-      </div>
-    </div>
   </template>
 
 </odoo>
