--- a/invoice_template_custom_erplibre/static/src/scss/layout_custom_erplibre.scss
+++ b/invoice_template_custom_erplibre/static/src/scss/layout_custom_erplibre.scss
@@ -1,50 +1,45 @@
+
 // ------------------------------------------------------------------
 // Geo
 // ------------------------------------------------------------------
 @import url('https://fonts.googleapis.com/css2?family=Geo&display=swap');
 
-.o_custom_erplibre_header,
-.o_report_layout_custom_erplibre,
-.o_custom_erplibre_footer {
+.o_report_layout_custom {
     font-family: 'Geo', sans-serif;
+    width: 100%;
+    display: flex;
+    background: white;
+    position: relative;
+}
+.pagenumber {
+    width: 180px;
+    background-color: darken($o-brand-secondary, 25%);
+    color: white;
+    //padding-bottom: 12px;
     p {
-        padding: 0;
-        margin: 0;
+        margin-bottom: 0;
     }
 }
-.custom_erplibre_layout {
-    max-width: 100%;
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: 180px 1fr;
-    grid-template-rows: 180px 1fr;
-    & > * {
-        padding: 1rem;
-    }
-    .header {
-        grid-column: 1 / 1;
-        grid-row: 2 / -1;
-        padding: 0;
-        margin: 0 ;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        background-color: darken($o-brand-secondary, 25%);
-        color: white;
 
-        & > * {
-            padding: 1rem;
-        }
-    }
-    .header-logo {
+.o_header_custom {
+    margin-top: 180px;
+    width: 180px;
+    height: 1030px;
+    padding: 1rem;
+    background-color: darken($o-brand-secondary, 25%);
+    display: flex;
+    flex-direction: column;
+    color: white;
+
+    .header_custom--logo {
         width: 100%;
         img {
             width: 100%;
+            //max-height: a;
         }
     }
-    ul.header-info {
-        margin: 3rem 1rem;
+    .header_custom--info {
+        margin: 3rem 0;
         text-align: center;
         list-style: none;
         padding: 0;
@@ -54,20 +49,10 @@
         }
     }
 }
-.o_custom_erplibre_header {
-    max-width: 100%;
-    padding: 0;
-    margin: 0;
-}
-.o_custom_erplibre_footer {
-    background-color: darken($o-brand-secondary, 25%);
-    color: white;
-    display: flex;
-    align-items: flex-end;
-}
-.o_report_layout_custom_erplibre {
-    grid-column: 2 / 2;
-    grid-row: 1 / -1;
+.o_report_layout_custom .layout_custom--content {
+    padding: 1rem;
+    margin-top: 180px;
+    width: 750px;
 
     h2 {
         position: absolute;
@@ -75,18 +60,24 @@
         left: 0;
         width: 180px;
         height: 180px;
-        padding: 1rem;
         background: $o-brand-primary;
+        margin: 0;
+        padding: 1rem;
+
         display: flex;
         align-items: center;
         text-align: center;
     }
+
     #informations {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 1rem;
+
         display: flex;
-        flex-direction: column-reverse;
-        float: right;
-        width: 50%;
-        max-width: 250px;
+        flex-direction: column;
+
         text-align: center;
         margin-top: 0 !important;
 
@@ -94,8 +85,10 @@
             border-top: 1px solid black;
         }
     }
+
     .address {
         width: 100%;
+        padding: 1rem 0;
 
         div[name="address"] {
             margin-left: 0 !important;
@@ -104,11 +97,9 @@
     thead {
         background: $o-brand-primary;
     }
-
     .invoice_tbody td {
         border: 1px solid darken($o-brand-secondary, 15%);
     }
-
     .invoice_tbody tr:nth-child(odd) {
         background-color: $o-brand-secondary;
     }
