--- a/invoice_template_custom_erplibre/views/report_templates.xml
+++ b/invoice_template_custom_erplibre/views/report_templates.xml
@@ -17,7 +17,6 @@
         </xpath>
     </template>
 
-<!--    clean clone-->
     <template id="external_layout_custom_erplibre">
 <!--                <t t-set="full_width" t-value="True"/>-->
 
@@ -44,21 +43,19 @@
             </div>
 
             <div class="layout_custom--content">
-<!--                <t t-call="web.address_layout"/>-->
+                <t t-call="web.address_layout"/>
                 <t t-raw="0"/>
             </div>
 
         </div>
 
         <div class="footer">
-            <ul t-if="report_type == 'pdf'" class="list-inline pagenumber float-left text-center" style="border: 0">
-                <li class="list-inline-item">
-                    <strong>
-                        <span>page# </span>
-                        <span class="page"/>
-                    </strong>
-                </li>
-            </ul>
+            <div t-if="report_type == 'pdf'" class="pagenumber">
+                Page:
+                <span class="page"/>
+                of
+                <span class="topage"/>
+            </div>
         </div>
     </template>
 
