[IMP] minor layout improvements

--- a/invoice_template_custom_erplibre/static/src/scss/layout_custom_erplibre.scss
+++ b/invoice_template_custom_erplibre/static/src/scss/layout_custom_erplibre.scss
@@ -12,9 +12,9 @@
     position: relative;
 }
 .pagenumber {
-    width: 25%;
-    background-color: darken($o-brand-secondary, 25%);
-    color: white;
+    width: 100%;
+    text-align: center;
+    color: black;
     p {
         margin-bottom: 0;
     }
@@ -23,7 +23,8 @@
 .o_header_custom {
     margin-top: 48mm;
     width: 25%;
-    min-height: 273.55mm;
+    // full height: 279.4mm?? (margin-top, btn: 5mm, 10mm, header: 48mm)
+    min-height: 262mm;
     padding: 1rem;
     background-color: darken($o-brand-secondary, 25%);
     display: flex;
