--- a/invoice_template_custom_erplibre/views/report_templates.xml
+++ b/invoice_template_custom_erplibre/views/report_templates.xml
@@ -19,16 +19,31 @@
         </xpath>
     </template>
 
+    <!-- conditional to company.external_report_layout_id.key, set full width  -->
     <template id="report_layout_custom" inherit_id="web.report_layout">
-    <!-- TODO: add conditional on the company.external_report_layout_id.key == 'invoice_template_custom_erplibre.external_layout_custom_erplibre' -->
-        <xpath expr="//body/div[@id='wrapwrap']/main" position="attributes">
-            <attribute name="style">margin: 0; padding: 0; max-width: 100%;</attribute>
+        <xpath expr="//body/div[@id='wrapwrap']/main" position="before">
+            <!-- set company -->
+            <t t-if="not company">
+                <!-- Multicompany -->
+                <t t-if="company_id">
+                    <t t-set="company" t-value="company_id"/>
+                </t>
+                <t t-elif="o and 'company_id' in o">
+                    <t t-set="company" t-value="o.company_id.sudo()"/>
+                </t>
+                <t t-else="else">
+                    <t t-set="company" t-value="res_company"/>
+                </t>
+            </t>
+            <t t-if="company.external_report_layout_id">
+                <t t-if="company.external_report_layout_id.key == 'invoice_template_custom_erplibre.external_layout_custom_erplibre'">
+                    <t t-set="full_width" t-value="True"/>
+                </t>
+            </t>
         </xpath>
     </template>
 
     <template id="external_layout_custom_erplibre">
-<!--                <t t-set="full_width" t-value="True"/>-->
-
         <div class="article o_report_layout_custom"  t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id" t-att-data-oe-lang="o and o.env.context.get('lang')">
             <div class="o_header_custom">
                 <div class="header_custom--logo">
