--- a/invoice_template_custom_erplibre/views/report_invoice.xml
+++ b/invoice_template_custom_erplibre/views/report_invoice.xml
@@ -44,11 +44,14 @@
         <xpath expr="//t[@name='account_invoice_line_accountable']/td[6]" position="replace">
         </xpath>
 
-        <!-- placeholder TODO: add needed info -->
+        <!-- add bank info if exist -->
 <!--        <xpath expr="//t[@t-call='web.external_layout']">-->
-<!--            <div class="invoice-footer">-->
-<!--                <p>place footer info here</p>-->
-<!--            </div>-->
+<!--            <ul class="invoice-footer">-->
+<!--                <li t-if="manual_name"><span t-esc="manual_name"/></li>-->
+<!--                <li t-if="journal_name"><span t-esc="journal_name"/></li>-->
+<!--                <li t-if="acc_number"><span t-esc="acc_number"/></li>-->
+<!--                <li t-if="manual_post_msg"><span t-esc="manual_post_msg"/></li>-->
+<!--            </ul>-->
 <!--        </xpath>-->
 
     </template>
