--- a/document_template_custom_erplibre/static/src/scss/layout_custom_erplibre.scss
+++ b/document_template_custom_erplibre/static/src/scss/layout_custom_erplibre.scss
@@ -1,11 +1,14 @@
+@font-face {
+    font-family: 'URWGeometric';
+    src: url('../fonts/URWGeometric-Regular.woff') format('woff'),
+         url('../fonts/URWGeometric-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-// ------------------------------------------------------------------
-// Geo
-// ------------------------------------------------------------------
-@import url('https://fonts.googleapis.com/css2?family=Geo&display=swap');
 
 .o_report_layout_custom {
-    font-family: 'Geo', sans-serif;
+    font-family: URWGeometric, sans-serif;
     width: 100%;
     display: flex;
     background: white;
