[UPD] Added Translation Files (fr_CA) & WIP hooks to default paperformat

--- a/document_template_custom_erplibre/views/report_templates.xml
+++ b/document_template_custom_erplibre/views/report_templates.xml
@@ -14,7 +14,7 @@
             <t t-set="colclass" t-value="'col-6'"/>
         </xpath>
         <xpath expr="//div[@name='address']/t[1]" position="before">
-            <strong>Adresse du client:</strong>
+            <strong>Customer Address:</strong>
         </xpath>
     </template>
 
