--- a/document_template_custom_erplibre/views/report_invoice.xml
+++ b/document_template_custom_erplibre/views/report_invoice.xml
@@ -11,9 +11,17 @@
                 <i><span t-field="o.payment_term_id.note"/></i>
             </div>
         </xpath>
-        <!-- remove the invoice number in h2-->
-        <xpath expr="//div[@class='page']/h2/span[last()]" position="replace">
+
+        <!-- format date fields -->
+        <xpath expr="//p[@t-field='o.date_invoice']" position="replace">
+            <p class="m-0" t-esc="o.date_invoice.strftime('%d/%m/%Y')"/>
         </xpath>
+        <xpath expr="//p[@t-field='o.date_due']" position="replace">
+            <p class="m-0" t-esc="o.date_due.strftime('%d/%m/%Y')"/>
+        </xpath>
+
+        <!-- remove the invoice number in h2-->
+        <xpath expr="//div[@class='page']/h2/span[last()]" position="replace"/>
 
         <!-- add colgroup-->
         <xpath expr="//table[@name='invoice_line_table']/thead" position="before">
@@ -40,8 +48,21 @@
             <attribute name="t-attf-class">text-right</attribute>
         </xpath>
 
-        <!-- remove tax column -->
-        <xpath expr="//t[@name='account_invoice_line_accountable']/td[6]" position="replace"/>
+        <!-- remove tax & discount column -->
+        <xpath expr="//t[@name='account_invoice_line_accountable']" position="replace">
+            <td name="account_invoice_line_name"><span t-field="line.name"/></td>
+            <td class="text-right">
+                <span t-field="line.quantity"/>
+                <span t-field="line.uom_id"  groups="uom.group_uom"/>
+            </td>
+            <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
+                <span t-field="line.price_unit"/>
+            </td>
+            <td class="text-right o_price_total">
+                <span t-field="line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
+                <span t-field="line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
+            </td>
+        </xpath>
 
     </template>
   </data>
